# simple-notes-nox

./: #CMakeLists.txt#  .gitignore  CMakeLists.txt  CMakeLists.txt~  simple_notes_init.el
simple_notes/: CMakeLists.txt  CMakeLists.txt~  main.c  main.c~
simple_notes/Application/: CMakeLists.txt  application.c  application.h
simple_notes/CLIControllers/: CMakeLists.txt  CMakeLists.txt~  base_controller.c  base_controller.h  folder_controller.c  folder_controller.h  list_controller.c  list_controller.h  note_controller.c  note_controller.h
simple_notes/CLIViews/: CMakeLists.txt  folder_window.c  folder_window.h  help.c  help.h  label.c  label.h  label_cell.c  label_cell.h  note_window.c  note_window.h  table_view.c  table_view.h  table_view_cell.c  table_view_cell.h  table_window.c  table_window.h  view.c  view.h  view_utility.c  view_utility.h  window.c  window.h
simple_notes/DataStructures/: CMakeLists.txt  folder.c  folder.h  light_folder.c  light_folder.h  light_note.c  light_note.h  light_notes_string.c  light_notes_string.h  note.c  note.h  notes_string.c  notes_string.h  object.c  object.h  object.h~  string_style.c  string_style.h  string_type.c  string_type.h
simple_notes/Event/: CMakeLists.txt  event.c  event.h  event.h~
simple_notes/ModelPresenters/: CMakeLists.txt  entity_presenter.c  entity_presenter.h  folder_presenter.c  folder_presenter.h  ientity_model.c  ientity_model.h  imodel.c  imodel.h  note_presenter.c  note_presenter.h
simple_notes/Models/: CMakeLists.txt  base_model.c  base_model.h  base_model.h~  content_model.c  content_model.h  folders_model.c  folders_model.h  list_model.c  list_model.h  mediator.c  mediator.h  model_utility.c  model_utility.h  notes_model.c  notes_model.h  selected_list_model.c  selected_list_model.h
simple_notes/NotesParser/: parser.c  parser.h
simple_notes/Responder/: CMakeLists.txt  CMakeLists.txt~  responder.c  responder.h
simple_notes/SQLiteController/: CMakeLists.txt  sqlite_controller.c  sqlite_controller.h
simple_notes/SQLiteStore/: CMakeLists.txt  sqlite_store.c  sqlite_store.h  sqlite_store.h~
simple_notes/Store/: CMakeLists.txt  data_base.c  data_base.h  data_iterator.c  statement.c  (+15 more)
simple_notes_tests/: CMakeLists.txt  CMakeLists.txt~  content_model_testing.c  folders_model_testing.c  main.c  notes_model_testing.c  sqlite_controller_testing.c
(+15 files in other folders)
